# green-mango

./: .gitignore  AGENTS.md  CHANGELOG.md  README.md
backend/: .env.example  README.md  alembic.ini  pyproject.toml
backend/alembic/: env.py  script.py.mako
backend/alembic/versions/: 20260707_0001_create_core_tables.py  20260715_0002_add_meeting_guest_checkin_models.py  20260715_0003_add_auth_sessions.py  20260715_0004_add_guest_applications.py  20260716_0005_add_meeting_assistant_features.py  20260716_0006_add_meeting_navigation_location.py  20260720_0007_add_guest_source_and_field_status.py  20260721_0008_add_active_guest_identity_index.py  20260721_0009_add_assistant_contacts.py
backend/app/: __init__.py  main.py
backend/app/api/: __init__.py  dependencies.py  router.py
backend/app/core/: __init__.py  config.py  security.py  ssl_context.py
backend/app/db/: __init__.py  base.py  session.py
backend/app/models/: __init__.py  access.py  application.py  auth.py  guest.py  meeting.py  registration.py  user.py
backend/app/schemas/: __init__.py  admin_check_in.py  admin_resources.py  check_in.py  guest.py  guest_application.py  guest_session.py  health.py  meeting.py  meeting_assistant.py  session.py  staff.py  weather.py
backend/app/scripts/: __init__.py  seed_demo.py  seed_dev.py
backend/app/services/: __init__.py  (+13 more)
backend/tests/: conftest.py  test_admin_meetings.py  test_amap.py  test_db.py  test_excel_import.py  test_guest_sessions.py  test_health.py  test_meeting_assistant.py  test_models.py  test_sessions.py  test_staff_checkin.py  test_weather.py
(+151 files in other folders)
