[project]
name = "zhihui-meet-backend"
version = "0.1.0"
description = "FastAPI backend for Zhihui meeting and seminar management platform."
requires-python = ">=3.12"
dependencies = [
    "fastapi>=0.115,<1.0",
    "pydantic>=2,<3",
    "pydantic-settings>=2,<3",
    "sqlalchemy>=2.0,<3.0",
    "alembic>=1.13,<2.0",
    "uvicorn[standard]>=0.30,<1.0",
]

[project.optional-dependencies]
dev = [
    "httpx>=0.27,<1.0",
    "pytest>=8,<9",
]

[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[tool.pytest.ini_options]
testpaths = ["tests"]
pythonpath = ["."]

[tool.setuptools.packages.find]
include = ["app*"]
